--- a/index.html
+++ b/index.html
@@ -3,15 +3,17 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title></title>
-    <meta name="description" content="genfly Generated Project" />
-    <meta name="author" content="genfly" />
-    <meta property="og:image" content="/og-image.png" /> 
+    <title>OpenRouter - The Unified Interface For LLMs</title>
+    <meta name="description" content="Better prices, better uptime, no subscription. Access all major AI models through a single, unified interface." />
+    <meta name="author" content="OpenRouter" />
+    <meta property="og:title" content="OpenRouter - The Unified Interface For LLMs" />
+    <meta property="og:description" content="Better prices, better uptime, no subscription. Access all major AI models through a single, unified interface." />
+    <meta property="og:image" content="/og-image.png" />
+    <link rel="icon" type="image/svg+xml" href="/favicon.svg" />
   </head>
 
   <body>
     <div id="root"></div>
     <script type="module" src="/src/main.tsx"></script>
-    <script type="module" src="https://www.genfly.dev/editor.js"></script>
   </body>
 </html>
